# special-eureka

./: .Cargo.toml.swp  .eslint.config.ts  .eslintcache  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .npmrc  .prettierignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile.toml  Mikadono Sanshimai wa Angai, Choroi  README.md  TodoList  eslint.config.ts  graphql.config.ts  index.html  index.js  nx.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.ts  renovate.json  snippets.json  splashscreen.html  svelte.config.js  test.json  todo.md  tsconfig.json  turbo.json  v0.1.6-notes.md  vite.config.ts  vite.storybook.config.ts  vitest.config.ts
crates/graphql-persistent-queries/: Cargo.toml
crates/graphql-persistent-queries-sqlite-schema/: .gitignore  Cargo.toml  persistent-queries.db
crates/graphql-persistent-queries-sqlite-schema/migrations/2026-05-12-023549-0000_create_persistent_queries/: down.sql  up.sql
crates/graphql-persistent-queries-sqlite-schema/src/: lib.rs  schema.rs
crates/special-eureka-notification/: Cargo.toml
crates/special-eureka-notification/src/: lib.rs  linux.rs  other.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/core/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json5
src-tauri/core/capabilities/: mains.json
src-tauri/core/icons/: icon.icns
src-tauri/core/src/: builder.rs  commands.rs  hot_path.rs  lib.rs  logging.rs  main.rs  runtime.rs  states.rs
src-tauri/core/src/builder/: menu.rs  setup.rs  tray.rs
src-tauri/core/src/builder/setup/: deep_link.rs  tray.rs
src-tauri/core/src/commands/: close_splashcreen.rs  context_menu.rs  is_linux.rs  open_new_window.rs  sys_locale.rs  toggle_decoration.rs  updater.rs
src-tauri/examples/: storybook.rs  tauri.conf.json
src-tauri/examples/icons/: icon.icns
src-tauri/icons/: icon.icns
src-tauri/mangadex/: Cargo.toml  build.rs
src-tauri/mangadex-blacklist/: .gitignore  Cargo.toml  README.md  README.txt  blacklist.db
src-tauri/mangadex-blacklist/migrations/2026-03-04-082908-0000_create_authors/: up.sql
src-tauri/mangadex-blacklist/migrations/2026-03-04-144016-0000_create_users/: up.sql
src-tauri/mangadex-blacklist/src/: lib.rs  schema.rs
src-tauri/mangadex/permissions/autogenerated/: reference.md
src-tauri/mangadex/permissions/autogenerated/commands/: graphql.toml  subscriptions.toml
src-tauri/mangadex/permissions/schemas/: schema.json
src-tauri/mangadex/src/: app_state.rs  blacklist.rs  cache.rs  constants.rs  error.rs  export.rs  ins_handle.rs  intelligent_notification_system.rs  lib.rs  mutation.rs  objects.rs  plugin.rs  plugin_setup.rs  query.rs  rate_limit.rs  scheme.rs  store.rs  subscription.rs  upload.rs  utils.rs
src-tauri/mangadex/src/app_state/: inner.rs  watch.rs
src-tauri/mangadex/src/blacklist/: connection.rs  filters.rs
src-tauri/mangadex/src/cache/: chapter.rs  cover.rs  favicon.rs
src-tauri/mangadex/src/cache/chapter/: sort.rs
src-tauri/mangadex/src/export/: csv.rs  myanimelist.rs  txt.rs
src-tauri/mangadex/src/ins_handle/: error.rs
src-tauri/mangadex/src/mutation/: api_client.rs  author.rs  blacklist.rs  captcha.rs  chapter.rs  cover.rs  custom_list.rs  export.rs  forums.rs  library.rs  manga.rs  oauth.rs  offline_app_state.rs  rating.rs  read_marker.rs  reading_state.rs  report.rs  scanlation_group.rs  upload.rs  user.rs  user_option.rs
src-tauri/mangadex/src/objects/: api_client.rs  author.rs  blacklist.rs  chapter.rs  cover.rs  custom_list.rs  legacy_id_mapping.rs  manga.rs  manga_chapter_group.rs  oauth.rs  offline_config.rs  rating.rs  read_marker.rs  report.rs  report_reason.rs  scanlation_group.rs  statistics.rs  tag.rs  user.rs
src-tauri/mangadex/src/plugin_setup/: export_sdl.rs  init_client_state.rs  init_states.rs  init_watches_states.rs  ins_handle.rs  plugin_config.rs  register_mangadex_client.rs  register_uri_scheme_protocol.rs
src-tauri/mangadex/src/query/: api_client.rs  auth.rs  author.rs  blacklist.rs  chapter.rs  cover.rs  custom_list.rs  download_state.rs  feed.rs  follows.rs  home.rs  infrastructure.rs  legacy.rs  library.rs  manga.rs  oauth.rs  offline_app_state.rs  rating.rs  read_marker.rs  report.rs  scanlation_group.rs  statistics.rs  tag.rs  upload.rs  user.rs  user_option.rs  utils.rs
src-tauri/mangadex/src/scheme/: chapters.rs  covers.rs  favicon.rs  upload_image.rs
src-tauri/mangadex/src/store/: keys.rs  types.rs
src-tauri/mangadex/src/subscription/: api_client.rs  author.rs  chapter.rs  chapter_layout.rs  chapter_pages.rs  cover.rs  custom_list.rs  download_state.rs  is_appstate_mounted.rs  is_following.rs  is_logged.rs  legacy.rs  manga.rs  manga_reading_state.rs  oauth.rs  rating.rs  read_marker.rs  reading_state.rs  scanlation_group.rs  statistics.rs  tag.rs  upload.rs  user.rs  user_option.rs  user_option_next.rs  utils.rs
src-tauri/mangadex/src/upload/: queue.rs  sessions.rs
src-tauri/mangadex/src/utils/: abort.rs  chapter.rs  collection.rs  download.rs  download_state.rs  download_state_rx.rs  get_attributes.rs  guards.rs  math.rs  read_marker.rs  refresh_token.rs  source.rs  splittable_param.rs  store.rs  traits_utils.rs  watch.rs
src-tauri/settings/: files-dirs.json  server-options.json
src-tauri/special-eureka/: Cargo.toml
src-tauri/special-eureka/capabilities/: mains.json
src-tauri/special-eureka/src/: builder.rs  commands.rs  lib.rs  main.rs  runtime.rs
src-tauri/special-eureka/src/builder/: menu.rs
src-tauri/special-eureka/src/commands/: close_splashcreen.rs  context_menu.rs  is_linux.rs  send_notification.rs  updater.rs
src-tauri/special-eureka/src/states/: last_focused_window.rs
src-tauri/src/: builder.rs  commands.rs  lib.rs  main.rs
src-tauri/src/builder/: menu.rs  setup.rs  tray.rs
src-tauri/src/commands/: close_splashcreen.rs  open_new_window.rs  toggle_decoration.rs
src-tauri/src/mangadex_desktop_api/: intelligent_notification_system.rs  mod.rs
src-tauri/src/mangadex_session/: main.rs
src/mangadex/plugin/tauri-plugin/: Cargo.toml
(+3316 files in other folders)
