[workspace]
members = ["./src-tauri/core", "./src-tauri/mangadex"]
default-members = ["./src-tauri/core"]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0"
tauri-build = { version = "2" }
tauri = "2"
tokio = "1"
anyhow = "1"
uuid = "1"
serde = "1.0"
thiserror = "1"
reqwest = "0.12"
bytes = "1"
async-graphql = "7"
time = "0.3"
mizuki = "1"
mizuki-build = "1"
url = "2.5"
actix = "0.13"
tower = "0.5"
dirs = "6"
enum_all_variants = "0.2.0"
enum-repr = "0.2"
enum-kinds = "0.5.1"
serde_repr = "0.1"
governor = "0.10"
log = "0.4"
fern = "0.7"
regex = "1"
futures-util = "0.3"
image = "0"
serde-xml-rs = "0.8"
clap = "4"
csv = "1"

[workspace.dependencies.tauri-plugin-notification]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-deep-link]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-opener]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-clipboard-manager]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-dialog]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"
features = ["deep-link"]

[workspace.dependencies.tauri-plugin-updater]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.mangadex]
path = "./src-tauri/mangadex"
package = "tauri-plugin-speu-mangadex"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
lto = "thin"
incremental = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "s"