[workspace]
members = [
	"./src-tauri/special-eureka", 
	"./src-tauri/mangadex", 
	"crates/diesel-sqlite-utils", 
	"crates/mangadex-blacklist"
, "crates/special-eureka-notification"]
default-members = ["./src-tauri/special-eureka"]
resolver = "3"

[workspace.dependencies]
serde_json = "1.0"
tauri-build = { version = "2" }
tauri = "2"
tokio = "1"
anyhow = "1"
uuid = "1"
serde = "1.0"
thiserror = "1"
reqwest = { version = "0.13", default-features = false, features = ["gzip", "zstd", "http2", "brotli", "deflate", "rustls"]}
bytes = "1"
async-graphql = "7"
time = "0.3"
mizuki = "1"
mizuki-build = "1"
url = "2.5"
actix = "0.13"
tower = "0.5"
dirs = "6"
enum_all_variants = "0.2.0"
enum-repr = "0.2"
enum-kinds = "0.5.1"
serde_repr = "0.1"
governor = "0.10"
log = "0.4"
fern = "0.7"
regex = "1"
futures-util = "0.3"
image = "0"
serde-xml-rs = "0.8"
clap = "4"
csv = "1"
hotpath = { version = "0.15" }
shrink_fit_wrapper = "1"
rand = "0.10"
itertools = "0.14"
favicon-picker = "1.0.0"
zip = "8"
tar = "0.4"
zstd = "0.13"
flate2 = "1"
bzip2 = "0.6"
diesel = "2"
libsqlite3-sys = { version = "0" }
mangadex-blacklist-raw = { path = "./crates/mangadex-blacklist" }
diesel_migrations = "2"
diesel-sqlite-utils = { path = "./crates/diesel-sqlite-utils" }
non-exhaustive = "0.1"
tempfile = "3"
notify-rust = "4"
duration-string = "0.5"
special-eureka-notification = { path = "./crates/special-eureka-notification" }

# disabled in favor of `special-eureka-notification`
# [workspace.dependencies.tauri-plugin-notification]
# git = "https://github.com/tauri-apps/plugins-workspace"
# branch = "v2"

[workspace.dependencies.tauri-plugin-deep-link]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-opener]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-clipboard-manager]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-dialog]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"
features = ["deep-link"]

[workspace.dependencies.tauri-plugin-updater]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[workspace.dependencies.mangadex]
path = "./src-tauri/mangadex"
package = "tauri-plugin-speu-mangadex"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
lto = "thin"
incremental = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.clippy-fast]
inherits = "dev"
opt-level = 1

[profile.clippy-fast.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
strip = true

# this is used for github releases ci
[profile.release-slow-compile]
inherits = "release"
codegen-units = 1

# this is used for github releases ci
[profile.release-fast-compile]
inherits = "release"
codegen-units = 256

[workspace.package]
rust-version = "1.93"
license-file = "./LICENSE"
authors = ["tonymushah tonymushahDev06@yahoo.com"]
edition = "2024"
repository = "https://github.com/tonymushah/special-eureka"
version = "0.2.4-4"
