[package]
name = "special-eureka"
version = "0.1.5"
description = "a mangadex desktop app build with tauri"
authors = ["tonymushah"]
license = ""
repository = "https://github.com/tonymushah/special-eureka"
default-run = "special-eureka"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["clipboard-write-text", "dialog-message", "fs-all", "global-shortcut-all", "http-all", "notification-all", "path-all", "process-exit", "reqwest-client", "shell-open", "system-tray", "updater", "window-set-fullscreen", "window-set-icon", "window-set-title"] }
tokio = "1.27.0"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-aptabase = "0.1"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
#tag = "v0.1.0"
branch = "dev"

[dependencies.tauri-plugin-speu-bilibili-comics]
path = "../src/bilibili-comics/plugin/tauri-plugin"

[dependencies.tauri-plugin-speu-mangadex]
path = "../src/mangadex/plugin/tauri-plugin"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "dev"

[profile.dev]
opt-level = 3

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

