[package]
name = "special-eureka"
version = "0.1.6"
description = "a mangadex desktop app build with tauri"
authors = ["tonymushah"]
license = ""
repository = "https://github.com/tonymushah/special-eureka"
default-run = "special-eureka"
edition = "2021"
exclude = ["./examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [ "window-set-content-protected",
    "os-all",
    "window-create",
    "window-close",
    "window-center",
    "window-show",
    "clipboard-write-text",
    "dialog-message",
    "global-shortcut-all",
    "http-all",
    "notification-all",
    "path-all",
    "process-exit",
    "reqwest-client",
    "shell-open",
    "system-tray",
    "updater",
    "window-set-fullscreen",
    "window-set-title",
] }
tokio = "1"
# tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-aptabase = "0"
sentry-tauri = "0.2"
#tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
#tag = "v0.1.0"
branch = "dev"

[dependencies.tauri-plugin-speu-bilibili-comics]
path = "../src/bilibili-comics/plugin/tauri-plugin"

[dependencies.tauri-plugin-speu-mangadex]
path = "../src/mangadex/plugin/tauri-plugin"

[profile.dev]
opt-level = 3

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
