[package]
name = "special-eureka"
version = "0.2.0-alpha.1"
description = "a manga reader desktop app build with tauri"
authors = ["tonymushah"]
license = ""
repository = "https://github.com/tonymushah/special-eureka"
default-run = "special-eureka"
edition = "2021"
exclude = ["./examples"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = [ "window-start-dragging", "window-hide", "window-unminimize", "window-minimize", "window-maximize", "window-set-decorations", "window-unmaximize", "process-relaunch", "window-set-content-protected",
    "os-all",
    "window-create",
    "window-close",
    "window-center",
    "window-show",
    "clipboard-write-text",
    "dialog-message",
    "global-shortcut-all",
    "http-all",
    "notification-all",
    "path-all",
    "process-exit",
    "reqwest-client",
    "shell-open",
    "system-tray",
    "updater",
    "window-set-fullscreen",
    "window-set-title",
    "linux-protocol-headers",
    "config-json5"
] }
tokio = "1"
# tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# sentry-tauri = "0.2"
#tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
anyhow = "1"
window-shadows = "0.2"
window-vibrancy = "0.4"
uuid = "1"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
#tag = "v0.1.0"
branch = "v1"

[dependencies.tauri-plugin-speu-mangadex]
path = "./mangadex"

[profile.dev]
opt-level = 3

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["./mangadex"]
