[package]
name = "special-eureka"
version = "0.2.0-4"
description = "a manga reader desktop app build with tauri"
authors = ["tonymushah"]
license = ""
repository = "https://github.com/tonymushah/special-eureka"
default-run = "special-eureka"
edition = "2024"
exclude = ["./examples", "./data"]
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = ["unstable", "tray-icon", "image-ico", "image-png"] }
tokio.workspace = true
# tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# sentry-tauri = "0.2"
#tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
anyhow.workspace = true
tauri-plugin-store.workspace = true
uuid.workspace = true
actix.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-dialog.workspace = true
fern.workspace = true
log.workspace = true
time = {workspace = true, features = ["formatting"]}
humantime = "2"
sys-locale = "0.3.2"
thiserror.workspace = true

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[dependencies.mangadex]
workspace = true

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "special-eureka"
path = "../bin/main.rs"
