[package]
name = "special-eureka"
version = "0.2.3-4"
description = "a manga reader desktop app build with tauri"
authors = ["tonymushah"]
license = ""
repository = "https://github.com/tonymushah/special-eureka"
edition = "2024"
exclude = ["./examples", "./data"]
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = ["codegen"] }

[dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = ["unstable", "tray-icon", "image-ico", "image-png"] }
tokio.workspace = true
# tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# sentry-tauri = "0.2"
#tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
anyhow.workspace = true
tauri-plugin-store.workspace = true
uuid.workspace = true
actix.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-dialog.workspace = true
fern.workspace = true
log.workspace = true
time = {workspace = true, features = ["formatting"]}
humantime = "2"
sys-locale = "0.3.2"
thiserror.workspace = true
tauri-plugin-single-instance.workspace = true
hotpath = { workspace = true, optional = true }
# csv = { workspace = true, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies.tauri-plugin-updater]
workspace = true
optional = true

[dependencies.mangadex]
workspace = true

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "updater"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
updater = ["tauri-plugin-updater"]
hotpath = ["dep:hotpath", "hotpath/hotpath", "mangadex/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc", "hotpath"]
hotpath-off = ["hotpath/hotpath-off"]
single-runtime = []
actix-multi-threaded = []
jemalloc = ["tikv-jemallocator"]
