[package]
name = "tauri-plugin-speu-mangadex"
version = "0.3.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.6.2", features = ["notification-all"] }
serde = "1.0"
tokio = "1"
thiserror = "1"
reqwest = "0.12.4"
log = "^0.4.21"
once_cell = "1"
serde_json = "1"
mangadex-api = { version = "3.3", default-features = false, features = [
    "rw-multi-thread",
    "serialize",
    "utils"
] }
mangadex-api-schema-rust = { version = "0.9", default-features = false, features = [
    "serialize",
] }
mangadex-api-types-rust = { version = "0.9", default-features = false, features = [
    "async-graphql",
] }
async-graphql = "7"
convert_case = "0.6"
tokio-stream = { version = "0" }
regex = "1"
bytes = "1"
async-stream = "0"
favicon-picker = "1.0.0"

[dependencies.mangadex-desktop-api2]
version = "0.6.0-alpha.6"
default-features = false

[dependencies.mangadex-api-input-types]
version = "0.5"
features = ["mangadex-api-resolver", "async-graphql"]

[dependencies.mizuki]
version = "0.2.0"

[dependencies.url]
version = "2.5.0"
features = ["serde"]

[dependencies.uuid]
version = "1.8"
features = ["serde", "v4"]

[dependencies.time]
version = "0.3"
features = ["serde-human-readable", "large-dates", "local-offset"]

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
#tag = "v0.1.0"
branch = "v1"
