[package]
name = "tauri-plugin-speu-mangadex"
version = "0.3.0"
authors = ["You"]
description = "The tauri plugin behind the Mangadex Part of special-eureka"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { workspace = true, features = ["notification-all"] }
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest.workspace = true
log = "^0.4.21"
once_cell = "1"
serde_json.workspace = true
mangadex-api = { version = "3.3", default-features = false, features = [
    "rw-multi-thread",
    "serialize",
    "utils",
] }
mangadex-api-schema-rust = { version = "0.9", default-features = false, features = [
    "serialize",
] }
mangadex-api-types-rust = { version = "0.9", default-features = false, features = [
    "async-graphql",
] }
async-graphql.workspace = true
convert_case = "0.6"
tokio-stream = { version = "0", features = ["sync"] }
regex = "1"
bytes.workspace = true
async-stream = "0"
favicon-picker = "1.0.0"
tempfile = "3.10.1"
tokio-util = "0.7.11"

[dependencies.mangadex-desktop-api2]
version = "0.6.0-alpha.6"
default-features = false

[dependencies.mangadex-api-input-types]
version = "0.5"
features = ["mangadex-api-resolver", "async-graphql"]

[dependencies.mizuki]
workspace = true

[dependencies.url]
workspace = true
features = ["serde"]

[dependencies.uuid]
workspace = true
features = ["serde", "v4"]

[dependencies.time]
workspace = true
features = ["serde-human-readable", "large-dates", "local-offset"]

[dependencies.tauri-plugin-store]
workspace = true
