[package]
name = "tauri-plugin-speu-mangadex"
version.workspace = true
authors.workspace = true
description = "The tauri plugin behind the Mangadex Part of special-eureka"
edition.workspace = true
rust-version.workspace = true
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
links = "mangadex-desktop-api"
repository.workspace = true

[build-dependencies]
mizuki-build.workspace = true

[dependencies]
tauri = { workspace = true }
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest.workspace = true
log.workspace = true
once_cell = "1"
serde_json.workspace = true
mangadex-api = { version = "4.2", default-features = false, features = [
	"oauth",
	"utils",
] }
mangadex-api-schema-rust = { version = "1", default-features = false, features = [
	"serialize",
] }
mangadex-api-types-rust = { version = "1", default-features = false, features = [
	"async-graphql",
] }
async-graphql = {workspace = true, features = ["time"]}
convert_case = "0.11"
tokio-stream = { version = "0", features = ["sync"] }
regex.workspace = true
bytes.workspace = true
async-stream = "0"
favicon-picker.workspace = true
tempfile.workspace = true
tokio-util = "0.7"
actix.workspace = true
tauri-plugin-notification.workspace = true
tower = { workspace = true, features = ["limit", "buffer"] }
duration-string = { version = "0.5", features = ["serde"] }
impl-trait-for-tuples = "0.2"
dirs.workspace = true
enum-repr.workspace = true
enum-kinds.workspace = true
serde_repr.workspace = true
governor.workspace = true
futures-util.workspace = true
image.workspace = true
serde-xml-rs.workspace = true
csv.workspace = true
hotpath = { workspace = true, optional = true }
shrink_fit_wrapper.workspace = true
rand.workspace = true
itertools.workspace = true
zip.workspace = true
tar.workspace = true
flate2.workspace = true
zstd.workspace = true
bzip2.workspace = true
diesel = { workspace = true, features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "time"] }
mangadex-blacklist-raw = { workspace = true }
diesel_migrations.workspace = true
diesel-sqlite-utils.workspace = true
non-exhaustive.workspace = true

[dependencies.eureka-mmanager]
git = "https://github.com/tonymushah/eureka-mmanager.git"

[dependencies.eureka-mmanager-core]
git = "https://github.com/tonymushah/eureka-mmanager.git"

[dependencies.emdx]
git = "https://github.com/tonymushah/eureka-mmanager.git"
optional = true

[dependencies.mangadex-api-input-types]
version = "1"
features = ["mangadex-api-resolver", "async-graphql"]

[dependencies.mizuki]
workspace = true

[dependencies.url]
workspace = true
features = ["serde"]

[dependencies.uuid]
workspace = true
features = ["serde", "v4", "v7", "std"]

[dependencies.time]
workspace = true
features = ["serde-human-readable", "large-dates", "local-offset"]

[dependencies.tauri-plugin-store]
workspace = true

[features]
hotpath = ["dep:hotpath"]
emdx = ["dep:emdx"]