[package]
name = "tauri-plugin-speu-mangadex"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.59"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.4.0" }
serde = "1.0"
tokio = "1.27.0"
thiserror = "1"
#anyhow = "1.0.58"
reqwest = "0.11.18"
log = "^0.4"
actix-web = "4"
fern = "0.6"
once_cell = "1.18.0"
#event-listener = "2.5.3"
serde_json = "1"
mangadex-api = {version = "2.3.1", default-features = false, features = ["multi-thread"]}
mangadex-api-schema-rust = { version = "0.4.1", default-features = false}
mangadex-api-types-rust = { version = "0.4.0", default-features = false}

[dependencies.mangadex-desktop-api2]
version = "0.4.2"
