[package]
name = "tauri-plugin-speu-mangadex"
version = "0.3.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.59"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.5.3" }
serde = "1.0"
tokio = "1"
thiserror = "1"
reqwest = "0.11.22"
log = "^0.4.20"
once_cell = "1"
serde_json = "1"
mangadex-api = { version = "3.0.0", default-features = false, features = [
    "rw-multi-thread",
    "serialize"
] }
mangadex-api-schema-rust = { version = "0.6", default-features = false, features = ["serialize"] }
mangadex-api-types-rust = { version = "0.6", default-features = false, features = ["async-graphql"]}
async-graphql = "6"
actix-router = "0"

[dependencies.mangadex-desktop-api2]
version = "0.6.0-alpha.1"
default-features = false

[dependencies.mangadex-api-input-types]
version = "0.1.0"
features = ["mangadex-api-resolver", "async-graphql"]

[dependencies.mizuki]
version = "0.2.0-alpha.1"

[dependencies.url]
version = "2.5.0"
features = ["serde"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "serde",
    "v4",
]

[dependencies.time]
version = "0.3"
features = ["serde-human-readable", "large-dates", "local-offset"]
